Refactor: Unit Test Services without DB Dependency (#184)
* Create health router

* Dictionary Routes moved into router
Note: Changes route `/diff/` to `/dictionaries/diff`

* Comments and minor changes

* Refactor clients for external services into `/external` directory

* Enforce TS strict and fix type issues

* Major version bump, add immer and zod

* Remove explicit paths declaration and rules redundant with strict

* Copyright year update

* Dictionary Schema defined with Zod

* Move dictionary model to `/db` dir and base off new types

* Move diff code to a service

* Clean types, validate request inputs

* Update types and db code reference

* Move express handler wrappers to /routers dir

* Clean up types, use immer for immutable changes

* Handle ZodErrors thrown during requests

* Use new types

* Put `/diff` first to ensure it does not get blocked by `/:id` requests

* Small type fixes

* Update tests and fixtures to work with latest type validations

* Provide some basic schema examples

* Remove unused meta-schema

* Move /diff to its own router

* Organize all imports

* Diff request path back to original

* Organize Imports

* Mocha Testing Config separate from npm scripts

* Explicitly set `noImplicitAny` to enforce array.map type inference on unions

* Move Reference Types to their own file

* Refactor references utilities to use proper reference types

* Move reference test fixtures and fix linebreak normalization tests

* Remove console logs

* Add endpoints to fetch schema/field directly

* Fix missing field check, Error message cleanup

* Update new endpoint summary and description

* Prettier formatting

* Add sinon and chai-as-promised

* Add common access methods to dictionary repository

* Rename tests with *.spec.ts pattern

* Dictionary/Schema test fixtures with checked types, organized and simplified content

* Typo fix: primative -> primitive

* Separate D
